Add Playlist Download Feature

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,10 +9,16 @@
     </head>
 
     <body>
-        <form action="/download" method="post">
-            <label for="youTubeUrl">Enter YouTubeUrl: </label>
+        <form action="/downloadVideo" method="post">
+            <label for="youTubeUrl">Enter YouTubeURL: </label>
             <input type="text" id="youTubeUrl" name="youTubeUrl" required>
-            <button>Download</button>
+            <button>Download Video</button>
+        </form>
+
+        <form action="/downloadPlaylist" method="post">
+            <label for="playlistUrl">Enter Playlist URL: </label>
+            <input type="text" id="playlistUrl" name="playlistUrl" required>
+            <button>Download Playlist</button>
         </form>
     </body>
 </html>
