--- a/static/styles.css
+++ b/static/styles.css
@@ -1,18 +1,53 @@
+@import url(https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;1,400&display=swap);
+
+* {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+}
+
 body {
-    background-color: rgba(117, 191, 244, 0.87);
+    background: url('background2.jpg') no-repeat;
+    background-size: cover;
+    overflow: hidden;
 }
 
 .container{
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100vh;   /* height needed to be specify so that the vertical align-items work */
+    flex-direction: column;
+}
 
-    /* height needed to be specify so that the vertical align-items work */
-    height: 100vh;
+.wrapper{
+    width: 510px;
+    height: 510px;
+    background-color: rgba(0, 0, 0, 0.7);
+    backdrop-filter: blur(10px);
 
+    color: white;
+    border-radius: 20px;
+    border: 0.7px solid white;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
 }
 
 form{
+    padding: 5px;
     margin: 10px;
+    border: 0.7px solid white;
+    border-radius: 10px;
+}
+
+input{
+    border-radius: 10px;
+    margin-right: 5px;
+    margin-left: 5px;
+}
+
+button{
+    border-radius: 10px;
 }
